edit button modal not showing fixed

--- a/src/css/App.less
+++ b/src/css/App.less
@@ -46,17 +46,17 @@
     // hover behaviour for mass select, edit and delete icon
     // .checkbox,
     // .item-hover-toolbar-delete-button, 
-    .item-hover-toolbar-edit-button {
-      display: none;
-    }
+    // .item-hover-toolbar-edit-button {
+    //   display: none;
+    // }
   
-    .item-hover:hover {
-      //.checkbox,
-      //.item-hover-toolbar-delete-button, 
-      .item-hover-toolbar-edit-button {
-        display: block;
-      }
-    }
+    // .item-hover:hover {
+    //   //.checkbox,
+    //   //.item-hover-toolbar-delete-button, 
+    //   .item-hover-toolbar-edit-button {
+    //     display: block;
+    //   }
+    // }
     
     .item-hover-container {
       display: flex;
